--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <ol class='man-decor man-head man head'>
     <li class='tl'>git-sub(1)</li>
-    <li class='tc'>Git Subsitute Manual</li>
+    <li class='tc'></li>
     <li class='tr'>git-sub(1)</li>
   </ol>
 
